[gd_scene load_steps=3 format=3 uid="uid://bmh2bfxvuq45s"]

[ext_resource type="Script" uid="uid://1xeivr0undkn" path="res://telas/minigames/bio_escudo/Scenes/bioFato/bio_fato_bio_escudo.gd" id="1_gascg"]
[ext_resource type="PackedScene" uid="uid://c0nkhbv8diqwc" path="res://telas/interface/bioFato/bio_fato.tscn" id="7_x5if8"]

[node name="BioFato" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gascg")

[node name="BioFato" parent="." instance=ExtResource("7_x5if8")]
layout_mode = 1

[node name="Texto" type="Label" parent="BioFato"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.218
anchor_top = 0.512
anchor_right = 0.768
anchor_bottom = 0.691
offset_left = 0.0399933
offset_top = 0.039978
offset_right = 0.039978
offset_bottom = -0.280029
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.337255, 0.223529, 0.113725, 1)
theme_override_font_sizes/font_size = 20
text = "Você sabia que os médicos usam jalecos para se proteger e para te protejer de bactérias malvadas e sujeira?

Usar jaleco é legal!"
autowrap_mode = 3

[connection signal="botao_audio_pressed" from="BioFato" to="." method="_on_bio_fato_botao_audio_pressed"]
[connection signal="botao_continuar_pressed" from="BioFato" to="." method="_on_bio_fato_botao_continuar_pressed"]
